Current development:

Version 1.3:
   * Added maximum length for list name
   * Added comments
   * Added custom translations

Version 1.2:
   * Fixed mistakes in SKIP page
   * Fixed some small typos

Version 1.1:
   * Added SKIP codes
   * Added option to save search results

Version 1.0:
   * Initial release