@@ -1,4 +1,5 @@
 Current development:
+   * Optimized settings database
 
 Version 1.3:
    * Added maximum length for list name
